Generating OpenAPI based interface and connecting it to code
